styles.css
:root {
    --sky-colour: #01293F;
    --orb-main-colour: #DEDEDE;
    --orb-shade-colour: #999;
    --sea-top-colour: rgba(30, 131, 129, 0.5);
    --sea-bottom-colour: rgba(69, 76, 152, 0.5);
    --fish-main-colour: #F0592A;
    --fish-shade-colour: #CE4728;
    --letters-main-colour: #DDDDFF;
    --starfish-colour: #D06A3A;
    --tiny-fish-colour: #FFF;
}

html {
    height: 100%;
}

body {
    margin: 0;
    height: 100%;
}

.tf-checkbox {
    opacity: 0;
    position: fixed;
}

.tf-options-outer-container {
    position: absolute;
    top: 0;
    right: 0;
    display: flex;
    flex-direction: column;
}

.tf-options-button {
    display: inline-block;
    margin: 12px 8px;
    padding: 8px 10px;
    color: #FFF;
    font-family: sans-serif;
    font-size: 2em;
    text-align: center;
    background: rgba(1, 1, 1, 0.1);
    border: 2px solid #FFF;
    -webkit-tap-highlight-color: rgba(0,0,0,0);
    cursor: pointer;
}

#options-checkbox:checked ~ .tf-options-outer-container > .tf-options-button {
    color: #000;
    background: #FFF;
}

.tf-options-container {
    margin-right: 8px;
    margin-left: 8px;
    padding: 10px;
    display: flex;
    background: rgba(1, 1, 1, 0.3);
    border: 1px solid #FFF;
    flex-direction: column;
    transition: all 500ms ease-in-out;
}

.tf-option {
    display: flex;
    justify-content: space-between;
}

.tf-option-text {
    position: relative;
    top: 6px;
    color: #FFF;
    font-family: sans-serif;
    font-size: 1.6em;
    line-height: 2em;
}

#options-checkbox:checked ~ .tf-options-outer-container > .tf-options-container {
    transform: translateX(0);
}

#options-checkbox:not(:checked) ~ .tf-options-outer-container > .tf-options-container {
    transform: translateX(500px);
}

.tf-button {
    min-width: 3em;
    height: 3em;
    margin: 4px 4px 4px 10px;
    background: #F0592A;
    border-radius: 100%;
    border: 3px solid #DDD;
    box-shadow: inset 0 -4px 3px 1px #000,
                inset 0 2px 2px 3px #FFF;
    -webkit-tap-highlight-color: rgba(0,0,0,0);
    cursor: pointer;
}

#outline-checkbox:checked ~ .tf-options-outer-container label[for="outline-checkbox"],
#box-shadow-checkbox:checked ~ .tf-options-outer-container label[for="box-shadow-checkbox"],
#border-radius-checkbox:checked ~ .tf-options-outer-container label[for="border-radius-checkbox"],
#border-checkbox:checked ~ .tf-options-outer-container label[for="border-checkbox"],
#transform-checkbox:checked ~ .tf-options-outer-container label[for="transform-checkbox"],
#pseudo-elements-checkbox:checked ~ .tf-options-outer-container label[for="pseudo-elements-checkbox"] {
    background: #4FB95E;
}

#outline-checkbox:checked ~ div div,
#outline-checkbox:checked ~ div div:before,
#outline-checkbox:checked ~ div div:after {
    outline: 3px solid white;
}

#box-shadow-checkbox:not(:checked) ~ div div,
#box-shadow-checkbox:not(:checked) ~ div div:before,
#box-shadow-checkbox:not(:checked) ~ div div:after {
    box-shadow: 0 0 transparent !important;
}

#border-radius-checkbox:not(:checked) ~ div div,
#border-radius-checkbox:not(:checked) ~ div div:before,
#border-radius-checkbox:not(:checked) ~ div div:after {
    border-radius: 0 !important;
}

#border-checkbox:not(:checked) ~ div div,
#border-checkbox:not(:checked) ~ div div:before,
#border-checkbox:not(:checked) ~ div div:after {
    border: none !important;
}

#transform-checkbox:not(:checked) ~ div div,
#transform-checkbox:not(:checked) ~ div div:before,
#transform-checkbox:not(:checked) ~ div div:after {
    transform: none !important;
}

#pseudo-elements-checkbox:not(:checked) ~ div div:before,
#pseudo-elements-checkbox:not(:checked) ~ div div:after {
    display: none !important;
}


.tf-background {
    position: absolute;
    height: 100%;
    width: 100%;
    overflow: hidden;
}

.tf-sky {
    position: absolute;
    height: 150px;
    width: 100%;
    background: var(--sky-colour);
    transition: background 300ms;
}

.tf-cloud {
    opacity: 0.2;
    position: absolute;
    top: 50px;
    width: 70px;
    height: 24px;
    background: linear-gradient(to bottom, #f2f9fe 5%, #d6f0fd 100%);
    border-radius: 20px;
    transform: scale(1.5);
    animation: cloud_large 25s linear infinite;
}

.tf-cloud--small {
    top: 80px;
    transform: scale(1);
    animation: cloud_small 25s linear infinite;
    animation-delay: -1.5s;
}

.tf-cloud:before,
.tf-cloud:after {
    position: absolute;
    content: "";
    background: inherit;
}

.tf-cloud:before {
    width: 36px;
    height: 36px;
    top: -18px;
    right: 10px;
    border-radius: 40px;
}

.tf-cloud:after {
    width: 20px;
    height: 20px;
    top: -10px;
    left: 10px;
    border-radius: 20px;
}

.tf-stars {
    height: 3px;
    width: 3px;
    background: transparent;
    box-shadow:
            985px 6px #fff,
            375px 54px #fff,
            845px 4px #fff,
            624px 51px #fff,
            267px 30px #fff,
            7px 28px #fff,
            1027px 88px #fff,
            234px 88px #fff,
            1009px 26px #fff,
            1358px 63px #fff,
            1447px 21px #fff,
            1329px 1px #fff,
            1398px 94px #fff,
            269px 7px #fff,
            988px 51px #fff,
            1706px 95px #fff,
            346px 1px #fff,
            260px 142px #fff,
            1595px 58px #fff,
            1680px 43px #fff,
            678px 72px #fff,
            772px 9px #fff,
            222px 22px #fff,
            1493px 22px #fff,
            1400px 10px #fff,
            352px 79px #fff,
            786px 17px #fff,
            1945px 66px #fff,
            888px 50px #fff,
            1439px 29px #fff,
            580px 79px #fff,
            1643px 95px #fff,
            1249px 15px #fff,
            1703px 67px #fff,
            1195px 44px #fff,
            1890px 52px #fff,
            143px 36px #fff,
            1700px 9px #fff;
}
/* ... */

